# cppbaseutils

./: BUILD_SCRIPT_USAGE.md  CMakeLists.txt  README.md  README_QT_USAGE.md  README_REFACTOR.md  XLog_Usage_Example.md  build_modern.sh  example_usage.md
Src/: CMakeLists.txt  build_instructions.md
Src/Unix/: CMakeLists.txt  unixerr.cpp  unixerr.hpp
Src/Unix/XSignal/: xsignal.cpp  xsignal_p.hpp  xsignal_p_p.hpp
Src/Win/XSignal/: CMakeLists.txt  xsignal.cpp  xsignal.hpp  xsignal_p.hpp
Src/XAtomic/: CMakeLists.txt  xatomic.cpp  xatomic.hpp  xatomic_cxx11.hpp  xbasicatomic.h  xgenericatomic.hpp
Src/XConcurrentQueue/: CMakeLists.txt  concurrentqueue_internal_debug_p.hpp  lightweightsemaphore.cpp  lightweightsemaphore.hpp  lwsemaphore_mach_p.hpp  lwsemaphore_unix_p.hpp  lwsemaphore_win_p.hpp  moodycamelmacros.hpp  xblockingconcurrentqueue.hpp  xblockingconcurrentqueueabstract.hpp  xconcurrentqueue.cpp  xconcurrentqueue.hpp  xconcurrentqueueabstract.hpp  xconcurrentqueueproxy.hpp  xlightweightsemaphore.cpp  xlightweightsemaphore.hpp
Src/XContainer/: CMakeLists.txt  concurrentqueue_internal_debug_p.hpp  ringbuffer.cpp  ringbuffer.hpp  xconcurrentqueue.cpp  xconcurrentqueue.hpp  xconcurrentqueueabstract.hpp
Src/XContainerHelper/: CMakeLists.txt  xcontainerhelper.cpp  xcontainerhelper.hpp
Src/XCoroutine/: CMakeLists.txt  XCoroutine.hpp  xcoroasyncgenerator.hpp  xcorogenerator.hpp  xcorolazytask.hpp  xcoroutine.hpp  xcoroutinetask.hpp
Src/XCoroutine/impl/: connect.hpp  corolazytask.hpp  mixins.hpp  mixns_p.hpp  taskawaiterabstract.hpp  taskfinalsuspend.hpp  taskpromise.hpp  taskpromiseabstract.hpp  waitfor.hpp  xcorotaskabstract.hpp
Src/XCoroutine/private/: concepts_p.hpp  coroutine_p.hpp  mixns.hpp  mixns_p.hpp  taskawaiterabstract.hpp  taskfinalsuspend.hpp  taskpromise.hpp  taskpromiseabstract.hpp  waitoperationabstract_p.hpp  xcorotaskabstract.hpp
Src/XDesignPattern/: CMakeLists.txt  xcor.cpp  xcor.hpp
Src/XGlobal/: CMakeLists.txt  xclasshelpermacros.hpp  xtypeinfo.hpp  xtypes.cpp  xtypes.hpp  xversion.hpp
Src/XHelper/: CMakeLists.txt  xcallablehelper.hpp  xclasshelpermacros.hpp  xdecorator.hpp  xhelper.cpp  xhelper.hpp  xoverload.hpp  xqt_detection.hpp  xqthelper.cpp  xqthelper.hpp  xraii.hpp  xspace.hpp  xtypetraits.hpp  xutility.hpp  xversion.hpp
Src/XLog/: CMakeLists.txt  FORMAT_MACROS.md  README.md  example.cpp  xlog.cpp  xlog.hpp  xlog_p.hpp
Src/XMath/: CMakeLists.txt  xmath.cpp  xmath.hpp
Src/XMemory/: CMakeLists.txt  xmemory.cpp  xmemory.hpp
Src/XObject/: CMakeLists.txt  xfunctionaltools_impl.cpp  xfunctionaltools_impl.hpp  xobject.cpp  xobject.hpp  xobject_p.hpp  xobject_p_p.hpp  xobjectdefs_impl.hpp  xsignalslot.cpp  xsignalslot.hpp
Src/XQtHelper/: CMakeLists.txt  xqrunnable.hpp  xqthread.cpp  xqthread.hpp  xqthread_p.hpp
Src/XQtHelper/concurrency/: CMakeLists.txt  xqrunnable.hpp  xqthread.hpp
Src/XQtHelper/coro/: CMakeLists.txt  qcorofuture.hpp  qcoroiodevice.hpp  qcoroprocess.hpp  qcorosignal.hpp  qcorothread.hpp
Src/XSignal/: CMakeLists.txt  xabstractsignal.hpp  xsignal.cpp  xsignal.hpp  xsignal_p.hpp  xsignal_p_p.hpp
Src/XThreadPool/: CMakeLists.txt  xabstractrunnable.cpp  xabstractrunnable.hpp  xabstractrunnable_p.hpp  xorderedmutexlocker_p.hpp  xresult.cpp  xresult.hpp  xresult_p.hpp  xrunnable.hpp  xsemaphore.hpp  xthreadlocal.hpp  xthreadpool.cpp  xthreadpool.hpp  xthreadpool_p.hpp
Src/XTools/: CMakeLists.txt  xconnect.cpp  xconnect.hpp  xpointer.cpp  xpointer.hpp  xsignalslot.cpp  xsignalslot.hpp  xtools.cpp
Src/XTupleHelper/: CMakeLists.txt  xtuplehelper.cpp  xtuplehelper.hpp
Src/cmake/: AddQCoroLibrary.cmake  AddXUntilsLibrary.cmake  CopyQtDll.cmake  ExternalFunc.cmake  GenerateHeaders.cmake  Install.cmake  InternalFunc.cmake  LibraryConfig.cmake  QCoroFindQt.cmake  QtTestHelper.cmake  XCppBaseUtilsConfig.cmake.in  XUtils2Config.cmake.in  XUtilsConfig.cmake.in
Test/: CMakeLists.txt  XObjectSignalSlotTest.cpp  libtest.cpp  libtest.hpp  main.cpp  main.hpp  test_xlog.cpp
Test/ATProtoolTest/: CMakeLists.txt  atparser.cpp  atparser.hpp  main.cpp
Test/CoroutineTest/: CMakeLists.txt  coroutine1.hpp  main.cpp
Test/DesignPattern/: CMakeLists.txt
Test/DesignPattern/Adapter/: CMakeLists.txt  main.cpp  profit.cpp  profit.hpp  usdadapter.cpp  usdadapter.hpp  usdprofit.cpp  usdprofit.hpp
Test/DesignPattern/Bridge/: CMakeLists.txt  bluecolor.cpp  bluecolor.hpp  color.cpp  color.hpp  greencolor.cpp  greencolor.hpp  lineshape.cpp  lineshape.hpp  main.cpp  rectshape.cpp  rectshape.hpp  redcolor.cpp  redcolor.hpp  shape.cpp  shape.hpp  textshape.cpp  textshape.hpp
Test/DesignPattern/Builder/: CMakeLists.txt  companya.cpp  companya.hpp  companyb.cpp  companyb.hpp  director.cpp  director.hpp  main.cpp  systemconfig.cpp  systemconfig.hpp  systemconfigbuilder.cpp  systemconfigbuilder.hpp
Test/DesignPattern/ChainofResponsibility/: CMakeLists.txt  frame.hpp  main.cpp  processnode.cpp  processnode.hpp
Test/DesignPattern/Command/: CMakeLists.txt  main.cpp  mythread.cpp  mythread.hpp  runnable.cpp  runnable.hpp  taskthread.cpp  taskthread.hpp
Test/DesignPattern/Composite/: CMakeLists.txt  departmentnode.cpp  departmentnode.hpp  employeenode.cpp  employeenode.hpp  main.cpp  node.cpp  (+1 more)
Test/HazardPointer/: CMakeLists.txt  hazardpointer.cpp  hazardpointer.hpp  main.cpp
Test/MainTest/: CMakeLists.txt  main.cpp
Test/SignalSlotTest/: CMakeLists.txt
Test/concurrentqueueTest/: CMakeLists.txt  concurrentqueue.h  main.cpp
Test/logTest/: CMakeLists.txt  test_xlog.cpp
Test/qcorotest/: CMakeLists.txt  main.cpp
Test/qthelperTest/: CMakeLists.txt
Test/templatetest/: CMakeLists.txt  main.cpp
XGlobal/: CMakeLists.txt  xprocessordetection.hpp  xtypes.cpp  xtypes.hpp
XThreadPool/: CMakeLists.txt  main.cpp  xabstractrunnable.cpp  xabstractrunnable.hpp  xabstracttask.cpp  xabstracttask.h  xabstracttask.hpp  xabstracttask2.cpp  xabstracttask2.hpp  xresult.cpp  xresult.hpp  xsemaphore.hpp  xtask.cpp  xtask.hpp  xthread_pool.cpp  xthread_pool.hpp  xthreadlocal.hpp  xthreadpool.cpp  xthreadpool.hpp  xthreadpool2.cpp  xthreadpool2.hpp
(+260 files in other folders)
