add_subdirectory(MainTest)
add_subdirectory(logTest)
add_subdirectory(DesignPattern)
add_subdirectory(ATProtoolTest)
#add_subdirectory(SignalSlotTest)
add_subdirectory(templatetest)
add_subdirectory(concurrentqueueTest)
add_subdirectory(HazardPointer)
add_subdirectory(CoroutineTest)
add_subdirectory(qthelperTest)
