add_subdirectory(Proxy)
add_subdirectory(Decorate)
add_subdirectory(Observer)
add_subdirectory(Iterator)
add_subdirectory(Builder)
add_subdirectory(Adapter)
add_subdirectory(Bridge)
add_subdirectory(Facade)
add_subdirectory(Flyweight)
add_subdirectory(Composite)
add_subdirectory(Strategy)
add_subdirectory(Command)
add_subdirectory(ChainofResponsibility)
add_subdirectory(Status)
add_subdirectory(Medium)
add_subdirectory(TemplateMethod)
add_subdirectory(Visitor)
