if(APPLE OR UNIX)
    set(CMAKE_PREFIX_PATH "$ENV{HOME}/Qt/6.10.1/macos")
    list(APPEND Qt6_DIR "$ENV{HOME}/Qt/6.10.1/macos")
elseif (WIN32)
    list(APPEND Qt6_DIR "C:/Qt/6.10.1/msvc2022_64")
    set(CMAKE_PREFIX_PATH "C:/Qt/6.10.1/msvc2022_64")
endif()

add_subdirectory(xqthread)
unset(Qt6_DIR)
add_subdirectory(qcorotest)
